# shadowpay-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: async_batch_payments.py  chatgpt_bot.py  data_api_bot.py  decorator_example.py
js/: package-lock.json  package.json  prove.js
prover-service/: .gitignore  index.js  package-lock.json  package.json
shadowpay/: __init__.py  async_bot.py  bot.py  client.py  decorators.py  exceptions.py  prover.py  prover_factory.py  prover_subprocess.py  types.py  utils.py
shadowpay/testing/: __init__.py  mock.py
tests/: __init__.py  conftest.py  test_bot.py  test_client.py  test_types.py
