[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowpay"
version = "1.0.0"
description = "Python SDK for ShadowPay - Privacy-preserving payments on Solana"
authors = [{name = "RADR", email = "contact@radr.fun"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["solana", "payments", "zk-proofs", "blockchain", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "solders>=0.18.0",
    "base58>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
]

subprocess = [
    "shadowpay",
]

[project.urls]
Homepage = "https://github.com/Lukey372/ShadowPay"
Documentation = "https://shadow.radr.fun/shadowpay"
Repository = "https://github.com/Lukey372/ShadowPay"
"Bug Tracker" = "https://github.com/Lukey372/ShadowPay/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shadowpay*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

